--- a/BabyDiary/app/src/main/AndroidManifest.xml
+++ b/BabyDiary/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegActivity"/>
+        <activity android:name=".LoginActivity"/>
     </application>
 
 </manifest>
