--- a/BabyDiary/app/src/main/AndroidManifest.xml
+++ b/BabyDiary/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".RegActivity"/>
         <activity android:name=".LoginActivity"/>
+        <activity android:name=".TodoActivity"/>
     </application>
 
 </manifest>
